fixed some LINT warning+errors